# airquality4pi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: main.yml
frontend/: Dockerfile  db.json  model.py  plants.py  start.bat  start_app.sh
frontend/templates/: add_note.html  base.html  index.html  measurements.html  plants.html
src/: CMakeLists.txt  main.cpp
src/db/: db_manager.h  dht_sql_builder.h  handle.h  sql_builder.h
src/dht_sensor/: CMakeLists.txt  dht_result.h  dht_sensor.cpp  dht_sensor.h
test/unit/: CMakeLists.txt  test_dht_sensor.cpp  test_example.cpp
